--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Main Text -->
         <h1 class="text-[24px] md:text-[40px] lg:text-[40px] leading-tight mb-8 fade-up"
             style="animation-delay: 0.4s;">
-          <span class="san-serif-medium">Wes help you find </span>
+          <span class="san-serif-medium">We help you find </span>
           <span class="times-italic">like minded people who truly understand you</span>
         </h1>
       
