--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       
       <a href="https://tally.so/r/nPJpy0" target="_blank" rel="noopener noreferrer">
         <button
-        class="bg-white text-[#343434] text-[15px] md:text-[16px] lg:text-[18px] font-medium px-6 py-3 rounded-[30px] hover:bg-gray-200 transition animated-button"
+        class="bg-white text-[#343434] text-[15px] md:text-[16px] lg:text-[18px] font-medium px-6 py-3 rounded-[30px] hover:bg-gray-200 transition fade-up"
+        style="animation-delay: 0.8s;"
       >
         Join Paasa Today
       </button>
