--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pasa</title>
+    <title>Paasa | Meet, Connect and Share with Paasa</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css" />
 
@@ -11,7 +12,7 @@
   <body class="relative text-white min-h-screen flex items-center justify-center px-4 overflow-hidden" style="background-color: #080500;">
 
     <!-- Body Section -->
-    <main class="z-20 text-center max-w-[636px]">
+    <main class="z-20 text-center max-w-[850px]">
         <!-- Logo -->
         <img src="paasa.svg" alt="Pasa Logo"
              class="mx-auto w-[160px] h-[47px] mb-8 fade-up"
@@ -20,14 +21,15 @@
         <!-- Main Text -->
         <h1 class="text-[24px] md:text-[40px] lg:text-[40px] leading-tight mb-8 fade-up"
             style="animation-delay: 0.4s;">
-          <span class="san-serif-medium">We help you find </span>
-          <span class="times-italic">like minded people who truly understand you</span>
+          <span class="san-serif-medium">The best conversations start at the dinner table. </span>
+          <br class="hidden md:block">
+          <span class="times-italic">And we're just here to set the scene.</span>
         </h1>
       
         <!-- Subtext -->
         <p class="san-serif-medium text-[#9d9d9d] text-[16px] md:text-[20px] lg:text-[20px] mb-8 fade-up"
            style="animation-delay: 0.6s;">
-          Meet, Connect and Share with Paasa
+           Sign up, answer a few fun questions, and let our smart matching introduce you to a handpicked group of incredible people. One delicious meal. Endless new connections.
         </p>
       
         <!-- <button
